Rabbit.eat() updates